--- a/src/main/resources/static/app/assets/css/style.css
+++ b/src/main/resources/static/app/assets/css/style.css
@@ -1,3 +1,5 @@
 .bg{background:url("../images/phone.png") no-repeat center center;height:720px;}
 .custom{width: 310px;float: none;margin: 0 auto; margin-top: 100px;}
 .marginTop50{margin-top:50px;}
+.title {font-size: 15px; font-weight:700}
+#customdropdown {width:100%; height:34px; border-radius: 4px; text-align: center}
