--- a/src/main/resources/static/app/assets/css/style.css
+++ b/src/main/resources/static/app/assets/css/style.css
@@ -2,8 +2,10 @@
 .custom{width: 310px;float: none;margin: 0 auto; margin-top: 100px;}
 .marginTop50{margin-top:50px;}
 .marginTop25{margin-top:25px;}
+.marginTop10{margin-top:10px;}
+.marginTop0{margin-top:0px;}
 
 .title {font-size: 15px; font-weight:700}
-#customdropdown {width:100%; height:34px; border-radius: 4px; text-align: center}
+.customdropdown {width:100%; height:40px; border-radius: 4px; text-align: center}
 
 select[disabled] {background-color: #eee;}
