--- a/src/main/resources/static/app/partials/main.html
+++ b/src/main/resources/static/app/partials/main.html
@@ -4,9 +4,10 @@
 	<div class="custom">
 
 	<form name="workAddress" novalidate>
+	<div class="clearfix" ng-show="pickTeam">
 		<div>
 			<h1 class="title">Pick your team</h1>
-			<select id="customdropdown" class="dropdown" ng-disabled= "disableTeam" ng-model = "teamName" ng-options="teamName for teamName in teams" ng-change="selectedTeam(teamName)">{{teamName}} </select>
+			<select id="customdropdown" class="dropdown customdropdown" ng-disabled= "disableTeam" ng-model = "teamName" ng-options="teamName for teamName in teams" ng-change="selectedTeam(teamName)">{{teamName}} </select>
 		</div>
 		<div ng-show="showSchedule">
 			<div class="form-group">
@@ -15,13 +16,15 @@
 			</div>
 		</div>
 		<div class="alert alert-danger marginTop25" ng-show="showNoAddress">
-			<strong>No Scheduled Job</strong>
+			<strong>{{noSchedule}}</strong>
 		</div>
 		<div class="clearfix marginTop25">
 		  	<button type="submit" class="btn btn-default btn-lg" ng-click="backToTeam()" ng-show="showBackToTeam" >{{selectTeamBack}}</button>
 		    <button type="submit" class="btn btn-primary btn-lg pull-right" ng-click="getIPLocation()" ng-show="showSearchAddress" >{{searchAddress}}</button>
 			<button type="submit" class="btn btn-primary btn-lg" ng-click="getNextSchedule()" ng-show="showNext" >{{NextAddress}}</button>
-		</div>	  
+			<button type="submit" class="btn btn-success btn-lg pull-right" ng-click="startJob()" ng-show="showStart">Start Job</button>
+		</div>	
+	</div>  
 	  <!--<div> 
 		<p>MyLocation1: {{myLatitude}}</p>
 		<p>MyLocation2: {{myLongitude}}</p>
@@ -31,8 +34,7 @@
 		<p>Enterned Location2: {{eLongitude}}</p>
 	  </div>-->
 	  	
-		<div class="clearfix marginTop50">
-			<button type="submit" class="pull-left btn btn-success btn-lg" ng-click="startJob()" ng-show="showStart">Start Job</button>
+		<div class="clearfix marginTop10">
 			<button type="submit" class="pull-left btn btn-default btn-lg" ng-click="StopJob()" ng-show="showComplete">Complete Job</button>
 			<button type="submit" class="pull-right btn btn-danger btn-lg" ng-click="cancelJob()" ng-show="showCancel">Cancel Job</button>
 		</div>
@@ -40,23 +42,12 @@
 		  Total Duriation:  <strong>{{totalDuriation}} minutes</strong>
 		</div>
 		</br>
-			<!--<div class="form-group ">
-				<label for="address">Enter Reason for Cancel</label>
-				<textarea class="form-control" rows="3"></textarea>
-			</div> -->
-			<div class="dropdown "  ng-show="cancelReason">
-				<button class="btn btn-default btn-lg dropdown-toggle" type="button" data-toggle="dropdown">Select Cancel Reason
-				<span class="caret"></span></button>
-				<ul class="dropdown-menu">
-				  <li><a href="#">Machine Breakdown</a></li>
-				  <li><a href="#">No access</a></li>
-				  <li><a href="#">Door locked</a></li>
-				  <li><a href="#">Weather (Raining)</a></li>
-				  <li><a href="#">Power Outage</a></li>
-				  <li><a href="#">Other</a></li>
-				</ul>
-			</div>
-		
+			
+		<div class="clearfix" ng-show="showReasonForCancel">
+			<h1 class="title">Select reason for cancellation</h1>
+			<select class="dropdown customdropdown" ng-model="cancelreasonSelection" ng-options="x for x in cancelReasonText" ng-change="selectJobCancel(cancelreasonSelection)"></select>
+			<button type="submit" class="btn btn-primary btn-lg pull-left marginTop25" ng-click="submitCancelJob(cancelreasonSelection)">Submit</button>
+		</div>
 	</form>
 	</div>
   </div>
