--- a/src/main/resources/static/app/partials/main.html
+++ b/src/main/resources/static/app/partials/main.html
@@ -25,7 +25,7 @@
 		  	<button type="submit" class="btn btn-default btn-lg" ng-click="backToTeam()" ng-show="showBackToTeam" >{{selectTeamBack}}</button>
 		    <button type="submit" class="btn btn-primary btn-lg pull-right" ng-click="getIPLocation()" ng-show="showSearchAddress" >{{searchAddress}}</button>
 			<button type="submit" class="btn btn-primary btn-lg" ng-click="getNextSchedule()" ng-show="showNext" >{{NextAddress}}</button>
-			<button type="submit" class="btn btn-success btn-lg pull-right" ng-click="startJob()" ng-show="showStart">Start Job</button>
+			<!-- <button type="submit" class="btn btn-success btn-lg pull-right" ng-click="startJob()" ng-show="showStart">Start Job</button> -->
 		</div>	
 	</div>  
 	  <!--<div> 
