--- a/src/main/resources/static/app/assets/css/style.css
+++ b/src/main/resources/static/app/assets/css/style.css
@@ -1,3 +1,4 @@
+body{border-top:solid 35px #00dcff;}
 .bg{background:url("../images/phone.png") no-repeat center center;height:720px;}
 .custom{width: 310px;float: none;margin: 0 auto; margin-top: 100px;}
 .marginTop50{margin-top:50px;}
@@ -6,6 +7,9 @@
 .marginTop0{margin-top:0px;}
 
 .title {font-size: 15px; font-weight:700}
-.customdropdown {width:100%; height:40px; border-radius: 4px; text-align: center}
+.customdropdown {width:100%; height:45px; border-radius: 4px; text-align: center}
+.customHeight45{height:45px; }
+
+button{padding-right:25px !important;padding-left:25px !important;}
 
 select[disabled] {background-color: #eee;}
