--- a/src/main/resources/static/app/assets/css/style.css
+++ b/src/main/resources/static/app/assets/css/style.css
@@ -1,6 +1,9 @@
-body{border-top:solid 35px #00dcff;background: #333638;background-image:url('../images/grass.jpg');
-background-repeat:no-repeat;background-size:100%;}
-h1,h2,h3,h4,h5,label{color:#fdd203;text-transform: uppercase;}
+html,body{width:100%;height:100%;}
+body{border-top:solid 36px #ffc800;background: #333638;}
+.bc-image{background-image:url('../images/mow.jpg');background-repeat:no-repeat;width:100%;height:100%;background-size: cover;}
+.logo{background-image:url('../images/logo.png');background-repeat:no-repeat;width:100%;height:36px;background-position: center; position:absolute;top:0;}
+
+h1,h2,h3,h4,h5,label{text-transform: uppercase;}
 .bg{background:url("../images/phone.png") no-repeat center center;height:720px;}
 .custom{width: 310px;float: none;margin: 0 auto; margin-top: 100px;}
 .marginTop50{margin-top:50px;}
